# phantomlib

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  README.md  USAGE_RU.md  pyproject.toml  vibe-import.toml
examples/: example_usage.py
src/vibe_import/: __init__.py  analyzer.py  cli.py  config.py  docs_generator.py  extractor.py  generator.py  models.py
src/vibe_import/llm/: __init__.py  anthropic_provider.py  base.py  factory.py  openai_provider.py  openrouter_provider.py
tests/: __init__.py  test_analyzer.py  test_extractor.py  test_generator.py  test_pypi_check.py
