[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vibe-import"
version = "0.1.0"
description = "Automatically generate missing Python packages based on usage patterns using LLM"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Vibe Import Team" }
]
keywords = ["llm", "code-generation", "ast", "python", "package-generator"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]

dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "tomli>=2.0.0;python_version<'3.11'",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
vibe-import = "vibe_import.cli:main"

[project.urls]
Homepage = "https://github.com/vibe-import/vibe-import"
Documentation = "https://github.com/vibe-import/vibe-import#readme"
Repository = "https://github.com/vibe-import/vibe-import"

[tool.hatch.build.targets.wheel]
packages = ["src/vibe_import"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=vibe_import --cov-report=term-missing"